--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="theme-color" content="#ff003e">
+  <meta name="theme-color" content="#431bff">
   <meta name="application-name" content="Title">
-  <meta name="description" content="Description">
+  <meta name="description" content="Playing with matcaps and threejs">
   <meta name="keywords" content="Threejs, Javascript, Visualizer">
-  <meta name="subject" content="Description">
+  <meta name="subject" content="Playing with matcaps and threejs">
   <meta name="copyright" content="Author">
   <meta name="robots" content="index,follow">
   <meta name="topic" content="Coding">
-  <meta name="summary" content="Description">
+  <meta name="summary" content="Playing with matcaps and threejs">
   <meta name="author" content="Author">
   <meta name="url" content="https://example.com/index.html">
   <meta name="pagename" content="Title">
@@ -20,7 +20,7 @@
   <meta name="coverage" content="Worldwide">
   <meta name="distribution" content="Global">
   <meta name="rating" content="General">
-  <meta name="subtitle" content="Description">
+  <meta name="subtitle" content="Playing with matcaps and threejs">
   <meta name="target" content="all">
   <meta http-equiv="cleartype" content="on">
   <meta property="article:author" content="https://example.com/">
@@ -32,20 +32,20 @@
   <!-- Primary Meta Tags -->
   <title>Title</title>
   <meta name="title" content="Title">
-  <meta name="description" content="Description">
+  <meta name="description" content="Playing with matcaps and threejs">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://iondrimba.github.io/obstacles/public/index.html">
   <meta property="og:title" content="Title">
-  <meta property="og:description" content="Description">
+  <meta property="og:description" content="Playing with matcaps and threejs">
   <meta property="og:image" content="https://dummyimage.com/800x600/ff00ff/ffffff.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://iondrimba.github.io/obstacles/public/index.html">
   <meta property="twitter:title" content="Title">
-  <meta property="twitter:description" content="Description">
+  <meta property="twitter:description" content="Playing with matcaps and threejs">
   <meta property="twitter:image" content="https://dummyimage.com/800x600/ff00ff/ffffff.png">
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
