--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#431bff">
-  <meta name="application-name" content="Title">
+  <meta name="application-name" content="Matcaps and Threejs">
   <meta name="description" content="Playing with matcaps and threejs">
   <meta name="keywords" content="Threejs, Javascript, Visualizer">
   <meta name="subject" content="Playing with matcaps and threejs">
@@ -14,8 +14,8 @@
   <meta name="topic" content="Coding">
   <meta name="summary" content="Playing with matcaps and threejs">
   <meta name="author" content="Author">
-  <meta name="url" content="https://example.com/index.html">
-  <meta name="pagename" content="Title">
+  <meta name="url" content="https://iondrimba.github.io/madcaps/public/index.html">
+  <meta name="pagename" content="Matcaps and Threejs">
   <meta name="category" content="">
   <meta name="coverage" content="Worldwide">
   <meta name="distribution" content="Global">
@@ -23,30 +23,30 @@
   <meta name="subtitle" content="Playing with matcaps and threejs">
   <meta name="target" content="all">
   <meta http-equiv="cleartype" content="on">
-  <meta property="article:author" content="https://example.com/">
-  <meta property="article:publisher" content="https://example.com/">
-  <meta itemprop="name" content="Title">
-  <meta itemprop="image" content="https://dummyimage.com/800x600/ff00ff/ffffff.png">
+  <meta property="article:author" content="https://iondrimbafilho.me">
+  <meta property="article:publisher" content="https://iondrimbafilho.me">
+  <meta itemprop="name" content="Matcaps and Threejs">
+  <meta itemprop="image" content="https://raw.githubusercontent.com/iondrimba/images/master/madcaps.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
   <!-- Primary Meta Tags -->
-  <title>Title</title>
-  <meta name="title" content="Title">
+  <title>Matcaps and Threejs</title>
+  <meta name="title" content="Matcaps and Threejs">
   <meta name="description" content="Playing with matcaps and threejs">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://iondrimba.github.io/obstacles/public/index.html">
-  <meta property="og:title" content="Title">
+  <meta property="og:url" content="https://iondrimba.github.io/madcaps/public/index.html">
+  <meta property="og:title" content="Matcaps and Threejs">
   <meta property="og:description" content="Playing with matcaps and threejs">
-  <meta property="og:image" content="https://dummyimage.com/800x600/ff00ff/ffffff.png">
+  <meta property="og:image" content="https://raw.githubusercontent.com/iondrimba/images/master/madcaps.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://iondrimba.github.io/obstacles/public/index.html">
-  <meta property="twitter:title" content="Title">
+  <meta property="twitter:url" content="https://iondrimba.github.io/madcaps/public/index.html">
+  <meta property="twitter:title" content="Matcaps and Threejs">
   <meta property="twitter:description" content="Playing with matcaps and threejs">
-  <meta property="twitter:image" content="https://dummyimage.com/800x600/ff00ff/ffffff.png">
+  <meta property="twitter:image" content="https://raw.githubusercontent.com/iondrimba/images/master/madcaps.png">
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
