--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -50,6 +51,8 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
+  <link rel="prefetch" href="https://iondrimba.github.io/madcaps/public/matcaps/736655_D9D8D5_2F281F_B1AEAB.webp">
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com/" >
   <link href="https://fonts.googleapis.com/css?family=Ropa+Sans&display=swap" rel="stylesheet">
 </head>
 
